# netkit

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_NOTICES.md  compile_commands.json  vcpkg-configuration.json
.github/workflows/: ci.yml  fvp-bench.yml  test-full.yml
benchmark/: README.md  host_ab_suite_results.html  host_ab_suite_results_float32.txt  host_ab_suite_results_int8.txt  mobilenetv4_4way_report.md  mobilenetv4_4way_results.txt
benchmark/common/: benchmark_stats.hpp  tflite_host_flags.mk  tflm_host_flags.mk
benchmark/linkedin/: README.md  render_wins_summary.py
benchmark/mcu_ab_logs/: README.md  mcu_flash_investigation.txt  mcu_int8_ab_results.txt  mcu_int8_size_summary.txt
benchmark/netkit/: Makefile  bench.mk
benchmark/tflite/: Makefile  mnist_cnn_bench.py  mnist_cnn_int8_bench.py  mnist_mlp_bench.py  mnist_mlp_int8_bench.py  mobilenetv4_imagenet_bench.py  mobilenetv4_imagenet_int8_bench.py
benchmark/tflm/: .gitignore  Makefile  Makefile.inc  README.md
benchmark/tools/: host_ab_suite_common.py  run_host_ab_suite_float32.py  run_host_ab_suite_int8.py
benchmarks/: mnist_kernel_bench.cpp
benchmarks/fvp/: Makefile  dwt_cycles.h  fvp_m4_config.txt  hand_fvp_bench.c  linker_cm4.ld  startup_cm4.S
boards/: README.md
boards/esp32-p4-function-ev-cnn-dw-int8/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
boards/esp32-p4-function-ev-cnn-int8/src/: CMakeLists.txt  main.cpp
boards/esp32-p4-function-ev-cnn/src/: CMakeLists.txt  main.cpp
boards/esp32-p4-function-ev/components/netkit/: CMakeLists.txt
boards/esp32-p4-function-ev/components/netkit_float/: CMakeLists.txt
boards/xiao-esp32c3-mlp-int8/components/netkit/: CMakeLists.txt
boards/xiao-esp32s3-cnn-dw/src/: CMakeLists.txt  main.cpp
boards/xiao-esp32s3-tflm-cnn-dw-int8/src/: CMakeLists.txt  main.cpp
boards/xiao-esp32s3-tflm-cnn-dw/src/: CMakeLists.txt  main.cpp
boards/xiao-esp32s3-tflm-cnn-int8/src/: CMakeLists.txt  main.cpp
boards/xiao-esp32s3/components/netkit/: CMakeLists.txt
cmake/: netkit_arch.cmake  netkit_cmsis.cmake  netkit_environment.cmake  netkit_nmsis_nn.cmake  netkit_xnnpack.cmake
docs/: API.md  API_PARITY.md  ARENA.md  BUILD_TARGETS.md  CLI.md  CONVNEXTV2.md  DATATYPES.md  GENERIC_KERNELS.md  GETTING_STARTED.md  KERNELS.md  KNOWN_ISSUES.md  MNIST.md  MNIST_CNN.md  MOBILENETV4.md  MODEL_FORMAT.md  NK_FILE_SPECIFICATION.md  NK_FORMAT.md  ONNX.md  PHILOSOPHY.md  PLATFORMS.md  RESNET18.md  SPEECH_KWS.md  STATUS.md  TESTING.md  VECTORS_TESTS.md  YOLOX.md  c-api.md  cpp-api.md  nn.md
examples/: infer_c.c  infer_cpp.cpp  trim_firmware.cpp
include/: activation_followup.hpp  active_kernel.hpp  active_quant.hpp  arena.hpp  arena_util.hpp  cmsis_buffer_size.hpp  cmsis_dsp_kernel.hpp  cmsis_dsp_util.hpp  cmsis_hoisted_plan.hpp  cmsis_nn_kernel.hpp  cmsis_nn_quant.hpp  cmsis_quant_plan.hpp  cnn.hpp  conv2d.hpp  convnextv2_block.hpp  depthwise_conv2d.hpp  fused_kernel_ops.hpp  json_parser.hpp  kernel_activation.hpp  kernel_crtp.hpp  kernel_dispatch.hpp  kernel_workspace.hpp  layer_op_registry.hpp  mlp.hpp  mobilenetv4_uib.hpp  netkit.h  netkit_backend.h  netkit_config.h  netkit_log.hpp  netkit_loop_unroll.hpp  nk_format.hpp  nk_loader.hpp  nk_mmap.hpp  nk_op_detail.hpp  nmsis_nn_kernel.hpp  nmsis_nn_quant.hpp  ops.hpp  ops_resolver.hpp  quant_integer.hpp  quant_ops.hpp  (+11 more)
models/: cnn_4x4_single.nk  cnn_4x4_single.vectors.json  cnn_extended_ops.nk  cnn_hand.json  cnn_hand.nk  cnn_hand.vectors.json  convnextv2_atto_block.nk  deep_mlp.nk  deep_mlp.onnx  fashion_mnist_cnn.nk  fashion_mnist_cnn.onnx  fashion_mnist_mlp.nk  fashion_mnist_mlp.onnx  import_asym_depthwise_conv.nk  import_asym_depthwise_conv.onnx  import_mobilenet_uib.nk  import_mobilenet_uib.onnx  import_mobilenet_uib_skip.nk  import_mobilenet_uib_skip.onnx  import_resnet_basic_block.nk  import_resnet_basic_block.onnx  mlp_hand.json  mlp_hand.nk  mlp_hand.onnx  mlp_hand.vectors.json  mnist_cnn.nk  mnist_cnn.onnx  mnist_cnn_int8.nk  mnist_mlp.nk  mnist_mlp.onnx  mnist_mlp_int8.nk  mobilenetv4_small_int8.nk  mobilenetv4_small_uib.nk  op_matrix_cnn.nk  op_matrix_cnn.onnx  op_matrix_mlp.nk  op_matrix_mlp.onnx  resnet18_basic_block.nk  speech_kws.nk  speech_kws.onnx  (+6 more)
python/: README.md
src/: arena.cpp  cli.cpp  cmsis_buffer_size.cpp  cmsis_dsp_backend.cpp  cmsis_dsp_util.cpp  cmsis_nn_backend.cpp  cmsis_nn_quant_backend.cpp  cmsis_quant_plan.cpp  cnn.cpp  cnn_quant.cpp  conv1x1_kernel.cpp  conv2d.cpp  conv_depthwise_kernel.cpp  conv_direct_kernel.cpp  conv_dispatch.cpp  convnextv2_block.cpp  depthwise_conv2d.cpp  esp_nn_quant_backend.cpp  im2col_full.cpp  im2col_partial.cpp  json_parser.cpp  kernel_workspace.cpp  main.cpp  mlp.cpp  mobilenetv4_uib.cpp  model_loader.cpp  netkit_api.cpp  nk_format.cpp  nk_loader.cpp  nk_mmap.cpp  nk_regression.cpp  nmsis_nn_backend.cpp  nmsis_nn_quant_backend.cpp  ops.cpp  ops_resolver.cpp  ops_resolver_default.cpp  quant_ops.cpp  quant_softmax_s8.cpp  reference_kernel.cpp  resnet_basic_block.cpp  (+6 more)
tests/: embedded_smoke.c  test_c_api.c
tools/: check_trim_lib.sh  embed_hand_fvp_data.py  embed_nk_tests.py  eval_yolox_holdout.py  export_mnist_cnn_int8.py  export_mnist_mlp_int8.py  export_onnx_test_models.py  export_speech_kws.py  fetch_cmsis_core.sh  fetch_cmsis_dsp.sh  fetch_cmsis_nn.sh  fetch_esp_nn.sh  fetch_nmsis.sh  fetch_xnnpack.sh  migrate_nk_v3.py  nk_infer.c  pack_mobilenetv4_small_checkpoint.py  pack_resnet18_checkpoint.py  pack_yolox_mnv4_pafpn_checkpoint.py  run_embedded_smoke.sh  run_hand_fvp_bench.sh  run_mnist_kernel_bench.sh  run_mobilenetv4_4way_benchmark.sh  sync_third_party_licenses.sh  train_yolox_mnv4_pafpn_mini.py  write_convnextv2_atto_block_fixture.py  write_convnextv2_atto_fixture.py  write_hand_models.py  write_import_parity_models.py  write_mobilenetv4_imagenet_int8.py  write_mobilenetv4_small_fixture.py  write_mobilenetv4_small_int8.py  write_mobilenetv4_small_uib_fixture.py  write_op_matrix_models.py  write_resnet18_basic_block_fixture.py  write_resnet18_fixture.py  write_speech_kws_model.py  write_yolox_head_only_fixture.py
(+317 files in other folders)
